Thu Apr 30 13:59:16 GMT 2015  Olly Betts <olly@survex.com>

	* HACKING,INSTALL,configure.ac,xapian-config.in: Require a C++
	  compiler - the minimum required GCC version is now probably GCC 4.4.

Thu Apr 30 13:48:54 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-config.in: Remove superfluous comment left over from code
	  refactoring.

Thu Apr 30 13:47:30 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-config.in: Fix the include directory reported by --swigflags
	  for an installed copy to include the "/xapian-1.3" component for
	  a development version.

Thu Apr 30 12:34:14 GMT 2015  Olly Betts <olly@survex.com>

	* api/omenquire.cc: Fix for C++11 where AutoPtr is unique_ptr.

Thu Apr 30 12:20:22 GMT 2015  Olly Betts <olly@survex.com>

	* api/replication.cc,backends/chert/chert_database.cc,
	  backends/chert/chert_table.cc,backends/chert/chert_version.cc,
	  backends/glass/,backends/remote/remote-database.cc,bin/,
	  examples/copydatabase.cc,examples/quest.cc,
	  examples/xapian-metadata.cc,net/tcpclient.cc,
	  queryparser/queryparser.lemony: Add spaces between literal strings
	  and macros which expand to literal strings for C++11 compatibility.

Thu Apr 30 12:17:17 GMT 2015  Olly Betts <olly@survex.com>

	* bin/xapian-tcpsrv.cc: Use STRINGIZE() to include defaults literally
	  in string for --help.

Thu Apr 30 10:48:11 GMT 2015  Olly Betts <olly@survex.com>

	* HACKING: Update URL.

Thu Apr 30 10:47:10 GMT 2015  Olly Betts <olly@survex.com>

	* m4/ax_cxx_compile_stdcxx_11.m4: Add support for HP's aCC (untested
	  as I no longer have access to this compiler).

Thu Apr 30 05:30:13 GMT 2015  Olly Betts <olly@survex.com>

	* m4/ax_cxx_compile_stdcxx_11.m4: Add macro from autoconf-archive to
	  detect any compiler options needed to enable C++11 support (not yet
	  used).

Thu Apr 30 05:14:56 GMT 2015  Olly Betts <olly@survex.com>

	* common/posixy_wrapper.cc: O_RDONLY, etc are better described as
	  "POSIX" than "ANSI".
