@@ -1,3 +1,7 @@
+Thu Apr 30 14:21:37 GMT 2015  Olly Betts <olly@survex.com>
+
+	* common/unordered_map.h: No longer relevant now we require C++11.
+
 Thu Apr 30 13:59:16 GMT 2015  Olly Betts <olly@survex.com>
 
 	* HACKING,INSTALL,configure.ac,xapian-config.in: Require a C++
